trunk/Archive2/0e/3c72992be38304/output
main.cpp:5:18: error: parameter declared 'auto'
 auto f = [](auto x){return x*2;};
                  ^
main.cpp: In lambda function:
main.cpp:5:28: error: 'x' was not declared in this scope
 auto f = [](auto x){return x*2;};
                            ^
